updated folder structure

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 			<div class = "dropdown">
 				<!-- dropdown class to get align left property -->
-				<a href="portfolio/portfolio.html">
+				<a href="portfolio.html">
 					<button>Portfolio</button>
 				</a>
 			</div>
