--- a/mini-projects/weather/weather.html
+++ b/mini-projects/weather/weather.html
@@ -53,7 +53,7 @@
 			</div>
 
 			<div class = "dropdown">
-				<a href="../../physics.html">
+				<a href="../../physics/physics.html">
 					<button>PhD</button>
 				</a>
 			</div>
