--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<title>David Ellis - Axion Minicluster PhD</title>
-	<link rel="stylesheet" href="../style/main-style.css">
-	<link rel="stylesheet" href="../style/main-narrow.css">
-    <link rel="stylesheet" href="../style/portfolio-style.css">
+	<link rel="stylesheet" href="style/main-style.css">
+	<link rel="stylesheet" href="style/main-narrow.css">
+    <link rel="stylesheet" href="style/portfolio-style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="../scripts/main-script.js"></script>
+    <script src="scripts/main-script.js"></script>
 
 </head>
 
@@ -21,7 +21,7 @@
     <div id = "center-linkbox">
 	<div class = "dropdown">
 		<!-- dropdown class to get align left property -->
-        <a href="../index.html">
+        <a href="index.html">
 			<button>Home</button>
 		</a>
 	</div>
@@ -37,7 +37,7 @@
 
         <div class = "dropdown">
             <!-- dropdown class to get align left property -->
-            <a href="../physics/physics.html">
+            <a href="physics/physics.html">
                 <button>PhD</button>
             </a>
         </div>
@@ -46,8 +46,8 @@
             <button class="dropbtn" id="button2" onclick="myFunction('drop2')">Resume</button>
             <div class = "dropcont" id = "drop2">
                 
-                <a href="../other/DavidEllis_CV.pdf" target="_blank">English</a>
-                <a href="../other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
+                <a href="other/DavidEllis_CV.pdf" target="_blank">English</a>
+                <a href="other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
             </div>
         </div>
         
@@ -69,7 +69,7 @@
 
         <div class="filterDiv vis analytics">
             <a href="https://github.com/David-Ellis/reg-vis" target="_blank">
-                <img src="images/reg-vis.PNG" alt="Table of regression results made using reg-vis." >
+                <img src="portfolio/images/reg-vis.PNG" alt="Table of regression results made using reg-vis." >
                 <h3>RegVis</h3>
             </a>
             <hr>
@@ -86,7 +86,7 @@
 
         <div class="filterDiv vis analytics">
             <a href="#" target="_blank">
-                <img src="images/GP-mapper.png" alt="Choropleth map of Birmingham City showing dummy different colours for each ward. Data is randomly generated." >
+                <img src="portfolio/images/GP-mapper.png" alt="Choropleth map of Birmingham City showing dummy different colours for each ward. Data is randomly generated." >
                 <h3>GP-Mapper</h3>
             </a>
             <hr>
@@ -104,7 +104,7 @@
 
         <div class="filterDiv physics">
             <a href="https://ediss.uni-goettingen.de/handle/11858/14266" target="_blank">
-                <img src="images/thesis.PNG" alt="" >
+                <img src="portfolio/images/thesis.PNG" alt="" >
                 <h3>PhD Thesis: Axion Miniclusters</h3>
             </a>
             <hr>
@@ -120,7 +120,7 @@
 
         <div class="filterDiv vis webdev">
             <a href="https://howsmynhs.github.io/" target="_blank">
-                <img src="images/hows-my-nhs.png" alt="Homepage of the website How's My NHS?" >
+                <img src="portfolio/images/hows-my-nhs.png" alt="Homepage of the website How's My NHS?" >
                 <h3>How's My NHS?</h3>
             </a>
             <hr>
@@ -140,7 +140,7 @@
 
         <div class="filterDiv physics">
             <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.103514" target="_blank">
-                <img src="images/amc-structure.png" alt="" >
+                <img src="portfolio/images/amc-structure.png" alt="" >
                 <h3>Structure of axion miniclusters</h3>
             </a>
             <hr>
@@ -158,7 +158,7 @@
 
         <div class="filterDiv physics">
             <a href="https://github.com/David-Ellis/ps-toolkit" target="_blank">
-                <img src="images/ps-toolkit.png" alt="" >
+                <img src="portfolio/images/ps-toolkit.png" alt="" >
                 <h3>ps-toolkit</h3>
             </a>
             <hr>
@@ -176,7 +176,7 @@
 
         <div class="filterDiv physics">
             <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.103514" target="_blank">
-                <img src="images/amc-easy.PNG" alt="" >
+                <img src="portfolio/images/amc-easy.PNG" alt="" >
                 <h3>Axion Miniclusters Made Easy</h3>
             </a>
             <hr>
@@ -192,7 +192,7 @@
 
         <div class="filterDiv physics">
             <a href="https://github.com/David-Ellis/m3p_merger" target="_blank">
-                <img src="images/m3p-merger.png" alt="" >
+                <img src="portfolio/images/m3p-merger.png" alt="" >
                 <h3>m3p_merger</h3>
             </a>
             <hr>
@@ -209,8 +209,8 @@
         </div>
 
       <div class="filterDiv webdev">
-        <a href="../mini-projects/weather/weather.html" target="_blank">
-            <img src="images/weather.PNG" alt="" >
+        <a href="mini-projects/weather/weather.html" target="_blank">
+            <img src="portfolio/images/weather.PNG" alt="" >
             <h3>Weather Website</h3>
         </a>
         <hr>
@@ -229,8 +229,8 @@
 
 
     <div class="filterDiv webdev">
-        <a href="../mini-projects/pokegifs/pokegif.html" target="_blank">
-            <img src="images/pokegif.PNG" alt="" >
+        <a href="mini-projects/pokegifs/pokegif.html" target="_blank">
+            <img src="portfolio/images/pokegif.PNG" alt="" >
             <h3>Pokégif Finder</h3>
         </a>
         <hr>
@@ -248,7 +248,7 @@
 
     <div class="filterDiv physics">
         <a href="../physics/MastersThesis.pdf" target="_blank">
-            <img src="images/masters-thesis.PNG" alt="" >
+            <img src="portfolio/images/masters-thesis.PNG" alt="" >
             <h3>Masters Thesis: Detecting Axions</h3>
         </a>
         <hr>
@@ -264,7 +264,7 @@
 
     <div class="filterDiv">
         <a href="https://github.com/David-Ellis/NovaRace" target="_blank">
-            <img src="images/nova-race2.png" alt="" >
+            <img src="portfolio/images/nova-race2.png" alt="" >
             <h3>Nova Race</h3>
         </a>
         <hr>
@@ -280,7 +280,7 @@
 
     <div class="filterDiv">
         <a href="https://github.com/David-Ellis/TanksGame" target="_blank">
-            <img src="images/tanks.png" alt="" >
+            <img src="portfolio/images/tanks.png" alt="" >
             <h3>Tanks Game</h3>
         </a>
         <hr>
@@ -298,6 +298,6 @@
 
 </body>
 <!-- script for portfolio filters -->
-<script src="../scripts/portfolio-script.js"></script>
+<script src="scripts/portfolio-script.js"></script>
 
 </html>
