--- a/mini-projects/pokegifs/pokegif.html
+++ b/mini-projects/pokegifs/pokegif.html
@@ -68,7 +68,7 @@
 
 			<div class = "dropdown">
 				<!-- dropdown class to get align left property -->
-				<a href="../../portfolio/portfolio.html">
+				<a href="../../portfolio.html">
 					<button>Portfolio</button>
 				</a>
 			</div>
