--- a/physics/physics.html
+++ b/physics/physics.html
@@ -36,7 +36,7 @@
         <div id = "right-links">
 			<div class = "dropdown">
 				<!-- dropdown class to get align left property -->
-				<a href="../portfolio/portfolio.html">
+				<a href="../portfolio.html">
 					<button>Portfolio</button>
 				</a>
 			</div>
