added life expectancy project to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,11 +61,28 @@
         <button class="btn active" onclick="filterSelection('all')"> All</button>
         <button class="btn" onclick="filterSelection('vis')"> #DataVisualisation</button>
         <button class="btn" onclick="filterSelection('analytics')"> #DataAnalytics</button>
-        <button class="btn" onclick="filterSelection('webdev')"> #WebDevelopment</button>
+        <button class="btn" onclick="filterSelection('publichealth')"> #PublicHealth</button>
         <button class="btn" onclick="filterSelection('physics')"> #Physics</button>
+        <button class="btn" onclick="filterSelection('webdev')"> #WebDevelopment</button>
       </div>
 
       <div class="portfolio-container">
+
+        <div class="filterDiv publichealth">
+            <a href="https://github.com/David-Ellis/life-expectancy" target="_blank">
+                <img src="portfolio/images/life_exp.PNG" alt="Life expectancy and healthy life expectancy as a function of age." >
+                <h3>Life Expectancy</h3>
+            </a>
+            <hr>
+            <p> R code to calculate life expectancy and healthy life expectancy based on ONS definitions.</p>
+            <p class = "hashtag">
+                <span class="R">#R </span>
+                <span class="dplyr">#dplyr </span>
+                <span class="publichealth">#PublicHealth </span>
+
+            </p>
+
+        </div>
 
         <div class="filterDiv vis analytics">
             <a href="https://github.com/David-Ellis/reg-vis" target="_blank">
@@ -84,7 +101,7 @@
 
         </div>
 
-        <div class="filterDiv vis analytics">
+        <div class="filterDiv vis analytics publichealth">
             <a href="#" target="_blank">
                 <img src="portfolio/images/GP-mapper.png" alt="Choropleth map of Birmingham City showing dummy different colours for each ward. Data is randomly generated." >
                 <h3>GP-Mapper</h3>
@@ -99,6 +116,7 @@
                 <span class="datavis">#DataVis </span>
                 <span class="dplyr">#dplyr </span>
                 <span class="maps">#tmap </span>
+                <span class="publichealth">#PublicHealth </span>
             </p>
         </div>
 
