--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<li>📊 Data Analyst at Birmingham City Council</li>
 			<li>🌌 Astrophysics PhD Graduate</li>
 			<li>👨‍💻 Professional experience using Python, R and SQL</li>
-			<li>🤝 Passionate about being relationships with stakeholders</li>
+			<li>🤝 Passionate about building relationships with stakeholders</li>
 			<li>🏅 Certified Professional Data Analyst by DataCamp</li>
 		  </ul> 
 	</div>	
