--- a/portfolio.html
+++ b/portfolio.html
@@ -70,8 +70,10 @@
 
         <div class="filterDiv publichealth">
             <a href="https://github.com/David-Ellis/life-expectancy" target="_blank">
-                <img src="portfolio/images/life_exp.PNG" alt="Life expectancy and healthy life expectancy as a function of age." >
-                <h3>Life Expectancy</h3>
+                <div class="port-img-hue">
+                    <img src="portfolio/images/life_exp.PNG" alt="Life expectancy and healthy life expectancy as a function of age." >
+                </div>
+            <h3>Life Expectancy</h3>   
             </a>
             <hr>
             <p> R code to calculate life expectancy and healthy life expectancy based on ONS definitions.</p>
@@ -86,7 +88,9 @@
 
         <div class="filterDiv vis analytics">
             <a href="https://github.com/David-Ellis/reg-vis" target="_blank">
-                <img src="portfolio/images/reg-vis.PNG" alt="Table of regression results made using reg-vis." >
+                <div class="port-img-hue">
+                    <img src="portfolio/images/reg-vis.PNG" alt="Table of regression results made using reg-vis." >
+                </div>
                 <h3>RegVis</h3>
             </a>
             <hr>
@@ -102,8 +106,10 @@
         </div>
 
         <div class="filterDiv vis analytics publichealth">
-            <a href="#" target="_blank">
-                <img src="portfolio/images/GP-mapper.png" alt="Choropleth map of Birmingham City showing dummy different colours for each ward. Data is randomly generated." >
+            <a href="https://github.com/David-Ellis/GP-mapper" target="_blank">
+                <div class="port-img-hue">
+                    <img src="portfolio/images/GP-mapper.png" alt="Choropleth map of Birmingham City showing dummy different colours for each ward. Data is randomly generated." >
+                </div>
                 <h3>GP-Mapper</h3>
             </a>
             <hr>
@@ -122,7 +128,9 @@
 
         <div class="filterDiv physics">
             <a href="https://ediss.uni-goettingen.de/handle/11858/14266" target="_blank">
-                <img src="portfolio/images/thesis.PNG" alt="" >
+                <div class="port-img-hue">
+                    <img src="portfolio/images/thesis.PNG" alt="" >
+                </div>
                 <h3>PhD Thesis: Axion Miniclusters</h3>
             </a>
             <hr>
@@ -138,7 +146,9 @@
 
         <div class="filterDiv vis webdev">
             <a href="https://howsmynhs.github.io/" target="_blank">
-                <img src="portfolio/images/hows-my-nhs.png" alt="Homepage of the website How's My NHS?" >
+                <div class="port-img-hue">
+                    <img src="portfolio/images/hows-my-nhs.png" alt="Homepage of the website How's My NHS?" >
+                </div>
                 <h3>How's My NHS?</h3>
             </a>
             <hr>
@@ -158,7 +168,9 @@
 
         <div class="filterDiv physics">
             <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.103514" target="_blank">
-                <img src="portfolio/images/amc-structure.png" alt="" >
+                <div class="port-img-hue">
+                    <img src="portfolio/images/amc-structure.png" alt="" >
+                </div>
                 <h3>Structure of axion miniclusters</h3>
             </a>
             <hr>
@@ -176,7 +188,9 @@
 
         <div class="filterDiv physics">
             <a href="https://github.com/David-Ellis/ps-toolkit" target="_blank">
-                <img src="portfolio/images/ps-toolkit.png" alt="" >
+                <div class="port-img-hue">
+                    <img src="portfolio/images/ps-toolkit.png" alt="" >
+                </div>
                 <h3>ps-toolkit</h3>
             </a>
             <hr>
@@ -194,7 +208,9 @@
 
         <div class="filterDiv physics">
             <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.103514" target="_blank">
-                <img src="portfolio/images/amc-easy.PNG" alt="" >
+                <div class="port-img-hue">
+                    <img src="portfolio/images/amc-easy.PNG" alt="" >
+                </div>
                 <h3>Axion Miniclusters Made Easy</h3>
             </a>
             <hr>
@@ -210,7 +226,9 @@
 
         <div class="filterDiv physics">
             <a href="https://github.com/David-Ellis/m3p_merger" target="_blank">
-                <img src="portfolio/images/m3p-merger.png" alt="" >
+                <div class="port-img-hue">
+                    <img src="portfolio/images/m3p-merger.png" alt="" >
+                </div>
                 <h3>m3p_merger</h3>
             </a>
             <hr>
@@ -228,7 +246,9 @@
 
       <div class="filterDiv webdev">
         <a href="mini-projects/weather/weather.html" target="_blank">
-            <img src="portfolio/images/weather.PNG" alt="" >
+            <div class="port-img-hue">
+                <img src="portfolio/images/weather.PNG" alt="" >
+            </div>
             <h3>Weather Website</h3>
         </a>
         <hr>
@@ -248,7 +268,9 @@
 
     <div class="filterDiv webdev">
         <a href="mini-projects/pokegifs/pokegif.html" target="_blank">
-            <img src="portfolio/images/pokegif.PNG" alt="" >
+            <div class="port-img-hue">
+                <img src="portfolio/images/pokegif.PNG" alt="" >
+            </div>
             <h3>Pokégif Finder</h3>
         </a>
         <hr>
@@ -266,7 +288,9 @@
 
     <div class="filterDiv physics">
         <a href="../physics/MastersThesis.pdf" target="_blank">
-            <img src="portfolio/images/masters-thesis.PNG" alt="" >
+            <div class="port-img-hue">
+                <img src="portfolio/images/masters-thesis.PNG" alt="" >
+            </div>
             <h3>Masters Thesis: Detecting Axions</h3>
         </a>
         <hr>
@@ -282,7 +306,9 @@
 
     <div class="filterDiv">
         <a href="https://github.com/David-Ellis/NovaRace" target="_blank">
-            <img src="portfolio/images/nova-race2.png" alt="" >
+            <div class="port-img-hue">
+                <img src="portfolio/images/nova-race2.png" alt="" >
+            </div>
             <h3>Nova Race</h3>
         </a>
         <hr>
@@ -298,7 +324,9 @@
 
     <div class="filterDiv">
         <a href="https://github.com/David-Ellis/TanksGame" target="_blank">
-            <img src="portfolio/images/tanks.png" alt="" >
+            <div class="port-img-hue">
+                <img src="portfolio/images/tanks.png" alt="" >
+            </div>
             <h3>Tanks Game</h3>
         </a>
         <hr>
