--- a/portfolio.html
+++ b/portfolio.html
@@ -176,8 +176,8 @@
             <hr>
             <p> 
                 Publication: Identified densest axion miniclusters and calculated potential for graviational microlensing.
-                Given editors suggestion and <a href="https://physics.aps.org/articles/v15/s152", style = "color: blue">featured</a> in Physics Magazine.
-                <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.103514", style = "color: blue">David Ellis et al. (2022) PhysRevD.</a>
+                Given editors suggestion and <a href="https://physics.aps.org/articles/v15/s152", style = "color: #a276ac">featured</a> in Physics Magazine.
+                <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.103514", style = "color: #a276ac">David Ellis et al. (2022) PhysRevD.</a>
             </p>
             <p class = "hashtag">
                 <span class="physics">#physics </span>
@@ -215,7 +215,8 @@
             </a>
             <hr>
             <p> 
-                Publication: Using semi-analytical methods to simulate formation of dark matter structure in the early universe. <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.103.083525", style = "color: blue">David Ellis et al. (2021) PhysRevD.</a>
+                Publication: Using semi-analytical methods to simulate formation of dark matter structure in the early universe. 
+                <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.103.083525", style = "color: #a276ac">David Ellis et al. (2021) PhysRevD.</a>
             </p>
             <p class = "hashtag">
                 <span class="physics">#physics </span>
