added physics images and updated css

--- a/physics/physics.html
+++ b/physics/physics.html
@@ -88,6 +88,9 @@
         therefore infer that there exists some <i>additional</i> matter which we cannot see. We call this additional
         matter <i>dark</i> matter because we are unable to see it. 
     </p>
+
+    <img src="image/vel_curve.PNG" alt="Example galaxy velocity curve including contributions from stars, gas and dark matter.">
+
     <p>
         Additional evidence for the existence of dark matter include the motion of galaxy clusters, 
         measurements of the 
@@ -115,6 +118,8 @@
         The existence of the axion may cause weird objects to form in the very early universe such as axion strings and domain walls. These topological defects are very unstable and quickly decay and produce large quantities of axion particles.  
     </p>
 
+    <img src="image/mc-formation.PNG" alt="Example galaxy velocity curve including contributions from stars, gas and dark matter.">
+
     <p>
         At this point in time, there are no stars and no galaxies. Instead, the ordinary matter is still spread out evenly across space. However, the decay of these defects produces small regions that are densely populated by axions. These regions would collapse under the force of their own gravity to form what we know as <i>axion miniclusters</i>.
     </p>
@@ -124,6 +129,7 @@
         <a href="https://en.wikipedia.org/wiki/Gravitational_microlensing">gravitational microlensing</a>.
     </p>
 
+    <img src="image/lensingExampleMC.gif" alt="Example galaxy velocity curve including contributions from stars, gas and dark matter.">
 
     <h2>Publications</h2>
     <ul>
