--- a/portfolio.html
+++ b/portfolio.html
@@ -176,8 +176,8 @@
             <hr>
             <p> 
                 Publication: Identified densest axion miniclusters and calculated potential for graviational microlensing.
-                Given editors suggestion and <a href="https://physics.aps.org/articles/v15/s152", style = "color: #a276ac">featured</a> in Physics Magazine.
-                <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.103514", style = "color: #a276ac">David Ellis et al. (2022) PhysRevD.</a>
+                Given editors suggestion and <a href="https://physics.aps.org/articles/v15/s152", id = "sub-link">featured</a> in Physics Magazine.
+                <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.103514",  id = "sub-link">David Ellis et al. (2022) PhysRevD.</a>
             </p>
             <p class = "hashtag">
                 <span class="physics">#physics </span>
@@ -216,7 +216,7 @@
             <hr>
             <p> 
                 Publication: Using semi-analytical methods to simulate formation of dark matter structure in the early universe. 
-                <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.103.083525", style = "color: #a276ac">David Ellis et al. (2021) PhysRevD.</a>
+                <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.103.083525", id = "sub-link">David Ellis et al. (2021) PhysRevD.</a>
             </p>
             <p class = "hashtag">
                 <span class="physics">#physics </span>
