--- a/portfolio.html
+++ b/portfolio.html
@@ -114,8 +114,8 @@
             </a>
             <hr>
             <p> 
-                R module designed to automatically convert GP-level counts to a ward, constituency or locality level, 
-                and produce customisable choropleth maps, for Birmingham GP data.
+                R module designed to convert Birmingham GP data to a ward, constituency or locality level, 
+                and produce customisable choropleth maps.
             </p>
             <p class = "hashtag">
                 <span class="R">#R </span>
