--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<title>David Ellis</title>
+	<link rel="icon" href="images/favicon.svg">
 	<link rel="stylesheet" href="style/main-style.css">
 	<script src="scripts/main-script.js"></script>
 	<link rel="stylesheet" href="style/main-narrow.css">
