--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<title>David Ellis - Axion Minicluster PhD</title>
+	<title>David Ellis - Portfolio</title>
+    <link rel="icon" href="images/favicon.svg">
 	<link rel="stylesheet" href="style/main-style.css">
 	<link rel="stylesheet" href="style/main-narrow.css">
     <link rel="stylesheet" href="style/portfolio-style.css">
@@ -246,7 +247,7 @@
         </div>
 
       <div class="filterDiv webdev">
-        <a href="mini-projects/weather/weather.html" target="_blank">
+        <a href="mini-projects/weather/weather.html">
             <div class="port-img-hue">
                 <img src="portfolio/images/weather.PNG" alt="" >
             </div>
@@ -268,7 +269,7 @@
 
 
     <div class="filterDiv webdev">
-        <a href="mini-projects/pokegifs/pokegif.html" target="_blank">
+        <a href="mini-projects/pokegifs/pokegif.html">
             <div class="port-img-hue">
                 <img src="portfolio/images/pokegif.PNG" alt="" >
             </div>
@@ -342,6 +343,19 @@
     </div>
 
 </div>
+
+<div class="socials", style="margin-top: 1em;">
+	<a href="https://www.linkedin.com/in/david-john-ellis/" target="_blank">
+		<img src="images/social_links/linkedin.png" alt="LinkedIn Logo" >
+	</a>
+	<a href="https://github.com/David-Ellis" target="_blank">
+		<img src="images/social_links/github.png" alt="GitHub Logo" >
+	</a>
+	<a href="https://app.datacamp.com/profile/davidellis" target="_blank">
+		<img src="images/social_links/datacamp.png" alt="DataCamp Logo" >
+	</a>
+</div>
+
 
 </body>
 <!-- script for portfolio filters -->
