--- a/mini-projects/weather/weather.html
+++ b/mini-projects/weather/weather.html
@@ -19,6 +19,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Dave's Weather App - No ads, just the weather.</title>
+  <link rel="icon" href="../../images/favicon.svg">
   <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
   <script src="sketch.js"></script>
   <link rel="stylesheet" href="style.css">
