--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class = "home-box">
 	<img src="images/me.jpg" id="mypic" alt="Picture of me, David Ellis." >
 	<div id = "hi">
-		<h2>Hi, I'm Dr David Ellis:</h2>
+		<h2>Hi! I'm David Ellis:</h2>
 		<ul>
 			<li>📊 Data Analyst at Birmingham City Council</li>
 			<li>🌌 Astrophysics PhD Graduate</li>
