--- a/portfolio.html
+++ b/portfolio.html
@@ -52,12 +52,9 @@
         </div>
 
         <div class = "dropdown">
-            <button class="dropbtn" id="button2" onclick="myFunction('drop2')">Resume</button>
-            <div class = "dropcont" id = "drop2">
-                
-                <a href="other/DavidEllis_CV.pdf" target="_blank">English</a>
-                <a href="other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
-            </div>
+            <a href="other/David-Ellis-Resume.pdf" target="_blank">
+                <button id="button2">Resume</button>
+            </a>
         </div>
         
     </div>
