Updated home text

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 					<button id="button2">Resume</button>
 				</a>
 			</div>
+
 		</div>
 	</div>
 </div>
@@ -64,10 +65,10 @@
 	<div id = "hi">
 		<h2>Hi! I'm David Ellis:</h2>
 		<ul>
-			<li>📊 Data Analyst at Birmingham City Council</li>
+			<li>📊 Senior Data Analyst at Birmingham City Council</li>
 			<li>🌌 Astrophysics PhD Graduate</li>
 			<li>👨‍💻 Professional experience using Python, R and SQL</li>
-			<li>🤝 Passionate about building relationships with stakeholders</li>
+			<li>🤝 Developing creative stakeholder-led solutions</li>
 			<li>🏅 Certified Professional Data Analyst by DataCamp</li>
 		  </ul> 
 	</div>	
