Updated BSol.mapR details

--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
         <div class="filterDiv vis analytics publichealth">
             <a href="https://github.com/David-Ellis/GP-mapper" target="_blank">
                 <div class="port-img-hue">
-                    <img src="portfolio/images/GP-mapper.png" alt="Choropleth map of Birmingham City showing dummy different colours for each ward. Data is randomly generated." >
+                    <img src="portfolio/images/BSolmapR.png" alt="Logo for the BSol.mapR R package." >
                 </div>
                 <h3>GP-Mapper</h3>
             </a>
