Added posters to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,24 @@
 
       <div class="portfolio-container">
 
+        <div class="filterDiv publichealth vis analytics">
+            <a href="https://www.cityobservatory.birmingham.gov.uk/blog/developing-our-understanding-of-risk-factors-for-diabetes-and-birth-outcomes-in-birmingham" target="_blank">
+                <div class="port-img-hue">
+                    <img src="portfolio/images/phm-poster.gif" alt="Gif showing preview of the two posters made by the Birminghma City Council Population Health Management Team." >
+                </div>
+            <h3>Posters: Wider Determinants of Health In Birmingham</h3>   
+            </a>
+            <hr>
+            <p> Analysis of birth outcomes and diabetes presented at the <a href = "https://uobevents.eventsair.com/haca-2023/" target = "_blank">Health and Care Analytics Conference</a>.</p>
+            <p class = "hashtag">
+                <span class="publichealth">#PublicHealth </span>
+                <span class="R">#R </span>
+                <span class="python">#Python </span>
+                <span class="datavis">#DataVis </span>
+            </p>
+
+        </div>
+
         <div class="filterDiv publichealth">
             <a href="https://github.com/David-Ellis/life-expectancy" target="_blank"><div>
                 <div class="port-img-hue">
